Update naming and remove styles/vendors folder

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -11,7 +11,7 @@
 
   <meta name="description" content="">
 
-  {% include 'css-variables' %}
+  {% include 'theme' %}
   {% include 'style-tags' %}
   {% include 'script-tags', layout: 'theme' %}
 
