Add layout to styles-tag snippet

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -11,7 +11,7 @@
 
   <meta name="description" content="">
 
-  {% include 'style-tags' %}
+  {% include 'style-tags', layout: 'theme' %}
   {% include 'script-tags', layout: 'theme' %}
 
   {{ content_for_header }}
