--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,1 +1,4 @@
-<h1> wagwan </h1>
+{% section 'hero-banner' %}
+{% section 'featured-products' %}
+{% section 'about-section' %}
+{% section 'newsletter-signup' %}
