--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -5,7 +5,7 @@
       {% for product in collections.frontpage.products %}
         <li class="product-item">
           <a href="{{ product.url }}">
-<img src="{{ product.featured_image | img_url: '600x600' }}" alt="{{ product.title }}" width="600" height="600">            <h3>{{ product.title }}</h3>
+<img src="{{ product.featured_image | image_url: '600x600' }}" alt="{{ product.title }}" width="600" height="600">            <h3>{{ product.title }}</h3>
             <p>{{ product.price | money }}</p>
           </a>
         </li>
