Added styling to <a> tags for products. Green text with blue underlline when hovered
featured productsliquid i changed the margin on section title

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -66,6 +66,15 @@ p {
   text-wrap: pretty;
   font-family: var(--body-font);
 }
+a {
+  text-decoration: none;
+  color: var(--black);
+}
+
+a:hover {
+  text-decoration: underline;
+  text-decoration-color: var(--blue);
+}
 p,
 h1,
 h2,
