--- a/sections/featured-products.liquid
+++ b/sections/featured-products.liquid
@@ -1,7 +1,7 @@
 <section class="section featured-products">
-  <div class="wrapper">
-    <h2 class="section-title" style="text-align: center; margin: 2rem 0;
-        ">Featured Rattan Pieces</h2>
+  <div class="wrapper featured-products-wrapper">
+    <h2 class="section-title" style="text-align: center; margin: 3rem 0; color: var(--green); font-size: 2.5rem;">
+        Featured Rattan Pieces</h2>
     <ul class="product-grid">
       {% for product in collections.frontpage.products %}
         <li class="product-item">
