--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,4 +1,5 @@
-{% section 'hero-banner' %}
+{% comment %} {% section 'hero-banner' %}
 {% section 'featured-products' %}
 {% section 'about-section' %}
-{% section 'newsletter-signup' %}
+{% section 'newsletter-signup' %} {% endcomment %}
+{% comment %} NOTE: The above sections are commented out to stop repeating of section but tsill need this file to stop Shopify moaning {% endcomment %}
